Payment link updated

--- a/store/mega-graphic/index.html
+++ b/store/mega-graphic/index.html
@@ -44,7 +44,7 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="#enroll">Enroll Now</a>
+            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt">Enroll Now</a>
             <!-- </div> -->
         </nav>
 
@@ -82,10 +82,10 @@
 
         <!-- Specs Section -->
         <section class="specs">
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
-            </button>
+            </a>
 
             <div class="container-fluid specs-items">
                 <div class="row">
@@ -206,10 +206,10 @@
                         Adbobe
                     </p>
                 </div>
-                <button type="button" class="btn btn-primary btn-lg cta">
+                <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                     <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                     <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
-                </button>
+                </a>
             </div>
         </section>
 
@@ -350,10 +350,10 @@
                     ... And anyone who wants to Generate Leads or Sales
                 </h3>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
-            </button>
+            </a>
         </section>
 
         <!-- check header -->
@@ -449,10 +449,10 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
-            </button>
+            </a>
         </section>
 
         <!-- FAQ header Section -->
@@ -607,10 +607,10 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
-            </button>
+            </a>
         </section>
 
         <footer></footer>
