Payment link updated

--- a/store/trading/index.html
+++ b/store/trading/index.html
@@ -44,7 +44,7 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="#enroll">Enroll Now</a>
+            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt">Enroll Now</a>
             <!-- </div> -->
         </nav>
 
@@ -82,10 +82,10 @@
 
         <!-- Specs Section -->
         <section class="specs">
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
-            </button>
+            </a>
 
             <div class="container-fluid specs-items">
                 <div class="row">
@@ -216,12 +216,12 @@
                         Flipping Strategy
                     </p>
                 </div>
-                <button type="button" class="btn btn-primary btn-lg cta">
+                <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                     <h5>
                         Get Financial Freedom with the Art of Forex Trading!
                     </h5>
                     <p>(Only Rs 99 <del>USD 4,00</del>)</p>
-                </button>
+                </a>
             </div>
         </section>
 
@@ -362,10 +362,10 @@
                     ... And anyone who wants to Make Money
                 </h3>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
-            </button>
+            </a>
         </section>
 
         <!-- check header -->
@@ -460,10 +460,10 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
-            </button>
+            </a>
         </section>
 
         <!-- FAQ header Section -->
@@ -617,10 +617,10 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-primary btn-lg cta">
+            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
-            </button>
+            </a>
         </section>
 
         <footer></footer>
