--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     </head>
 
     <body>
+        <!-- whatsapp floating icon -->
+        <a href="https://wa.link/ekag57" class="float" target="_blank">
+            <i class="fa-brands fa-whatsapp my-float"></i>
+        </a>
+
         <header>
             <!-- Navbar Section -->
             <nav class="navbar navbar-expand-lg nav-style fixed-top">
@@ -227,28 +232,28 @@
                         <div class="col-lg-4 col-sm-10">
                             <div class="card">
                                 <img
-                                    src="./assets/course-1.png"
+                                    src="./assets/course-3.png"
                                     alt="Course 3"
                                     class="card-img-top"
                                 />
                                 <hr />
                                 <div class="card-body">
                                     <h3 class="card-title">
-                                        Mega Graphic Design Bootcamp
+                                        Code Guardian: Secure Code Review
                                     </h3>
                                     <p class="card-text">
-                                        In this course, you will learn the
-                                        fundamentals of graphic design and how
-                                        to create stunning designs using Adobe
-                                        Illustrator and Photoshop.
+                                        The book aims to help security analysts
+                                        gain a better understanding of secure
+                                        code review & penetration testing
+                                        concepts for cybersecurity.
                                     </p>
                                     <a
                                         type="button"
                                         class="btn btn-outline-info btn-rounded"
                                         data-mdb-ripple-color="dark"
-                                        href="./store/mega-graphic/index.html"
+                                        href="https://www.amazon.in/dp/B0C55SKWRY"
                                     >
-                                        Learn More
+                                        Buy on Amazon
                                     </a>
                                 </div>
                             </div>
