--- a/store/mega-graphic/index.html
+++ b/store/mega-graphic/index.html
@@ -36,6 +36,11 @@
     </head>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
+        <!-- whatsapp floating icon -->
+        <a href="https://wa.link/ekag57" class="float" target="_blank">
+            <i class="fa-brands fa-whatsapp my-float"></i>
+        </a>
+
         <!-- Navbar Section -->
         <nav class="navbar nav-style fixed-bottom">
             <!-- <div class="container"> -->
