--- a/store/trading/index.html
+++ b/store/trading/index.html
@@ -36,6 +36,11 @@
     </head>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
+        <!-- whatsapp floating icon -->
+        <a href="https://wa.link/ekag57" class="float" target="_blank">
+            <i class="fa-brands fa-whatsapp my-float"></i>
+        </a>
+
         <!-- Navbar Section -->
         <nav class="navbar nav-style fixed-bottom">
             <!-- <div class="container"> -->
@@ -44,7 +49,9 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt">Enroll Now</a>
+            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt"
+                >Enroll Now</a
+            >
             <!-- </div> -->
         </nav>
 
@@ -82,7 +89,11 @@
 
         <!-- Specs Section -->
         <section class="specs">
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
             </a>
@@ -216,7 +227,11 @@
                         Flipping Strategy
                     </p>
                 </div>
-                <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+                <a
+                    href="https://paytm.me/DMo-0Nt"
+                    type="button"
+                    class="btn btn-primary btn-lg cta"
+                >
                     <h5>
                         Get Financial Freedom with the Art of Forex Trading!
                     </h5>
@@ -362,7 +377,11 @@
                     ... And anyone who wants to Make Money
                 </h3>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
             </a>
@@ -460,7 +479,11 @@
                     </div>
                 </div>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
             </a>
@@ -617,7 +640,11 @@
                     </div>
                 </div>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Financial Freedom with the Art of Forex Trading!</h5>
                 <p>(Only Rs 99 <del>USD 4,00</del>)</p>
             </a>
