Added google tracking code
-added google tracking code

--- a/store/mega-graphic/index.html
+++ b/store/mega-graphic/index.html
@@ -34,6 +34,20 @@
         <!-- Custom File Links -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-SGC86KRC0S"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-SGC86KRC0S");
+    </script>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
         <!-- whatsapp floating icon -->
@@ -49,7 +63,9 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt">Enroll Now</a>
+            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt"
+                >Enroll Now</a
+            >
             <!-- </div> -->
         </nav>
 
@@ -87,7 +103,11 @@
 
         <!-- Specs Section -->
         <section class="specs">
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
             </a>
@@ -211,7 +231,11 @@
                         Adbobe
                     </p>
                 </div>
-                <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+                <a
+                    href="https://paytm.me/DMo-0Nt"
+                    type="button"
+                    class="btn btn-primary btn-lg cta"
+                >
                     <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                     <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
                 </a>
@@ -355,7 +379,11 @@
                     ... And anyone who wants to Generate Leads or Sales
                 </h3>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
             </a>
@@ -454,7 +482,11 @@
                     </div>
                 </div>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
             </a>
@@ -612,7 +644,11 @@
                     </div>
                 </div>
             </div>
-            <a href="https://paytm.me/DMo-0Nt" type="button" class="btn btn-primary btn-lg cta">
+            <a
+                href="https://paytm.me/DMo-0Nt"
+                type="button"
+                class="btn btn-primary btn-lg cta"
+            >
                 <h5>Get Job-Ready with the Art of Graphic Designing!</h5>
                 <p>(Only Rs 99 <del>Rs 1,999</del>)</p>
             </a>
