--- a/store/trading/index.html
+++ b/store/trading/index.html
@@ -34,6 +34,20 @@
         <!-- Custom File Links -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-SGC86KRC0S"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-SGC86KRC0S");
+    </script>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
         <!-- whatsapp floating icon -->
