Added jee advance subscription

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Featured Courses</h2>
+                            <h2>Featured Products</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -273,6 +273,7 @@
                             </div>
                         </div>
                     </div>
+                    <a id="all" href="products.html">All Products</a>
                 </div>
             </section>
         </main>
