--- a/products.html
+++ b/products.html
@@ -103,7 +103,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Featured Courses</h2>
+                            <h2>Featured Products</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -194,6 +194,35 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-10">
+                            <div class="card">
+                                <img
+                                    src="./assets/course-4.png"
+                                    alt="Course 4"
+                                    class="card-img-top"
+                                />
+                                <hr />
+                                <div class="card-body">
+                                    <h3 class="card-title">
+                                        JEE Advance Iconic Subscription
+                                    </h3>
+                                    <p class="card-text">
+                                        Unacademy IIT JEE Iconic subscription offers you one-on-one guidance from a personal coach throughout your learning journey along with all the benefits of Plus subscription.
+                                    </p>
+                                    <a
+                                        type="button"
+                                        class="btn btn-outline-info btn-rounded"
+                                        data-mdb-ripple-color="dark"
+                                        href="https://wa.link/ekag57"
+                                    >
+                                        Get on Whatsapp
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
