--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                     <div class="collapse navbar-collapse" id="navmenu">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a href="./products.html" class="nav-link"
+                                <a href="products.html" class="nav-link"
                                     >Products</a
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="#services" class="nav-link"
+                                <a href="services.html" class="nav-link"
                                     >Services</a
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="#contact" class="nav-link">Contact</a>
+                                <a href="contact.html" class="nav-link">Contact</a>
                             </li>
                         </ul>
                     </div>
