--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <!-- Navbar Section -->
             <nav class="navbar navbar-expand-lg nav-style fixed-top">
                 <div class="container">
-                    <a href="#" class="navbar-brand">
+                    <a href="index.html" class="navbar-brand">
                         <span>Cyber</span> Empire
                     </a>
 
@@ -88,7 +88,9 @@
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="contact.html" class="nav-link"
+                                    >Contact</a
+                                >
                             </li>
                         </ul>
                     </div>
@@ -99,7 +101,7 @@
         <main>
             <div class="contact-form">
                 <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSdS2vXWJTK3urV8_U4Y5jY4G9WOBhJts6nP3WN4EiN-cyz5uQ/viewform?embedded=true"
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSdw7lEXXkOvklMYxG3FVPlK836rR56XtEkOOxEToRmHJ9EqUQ/viewform?embedded=true"
                     width="640"
                     height="1100"
                     frameborder="0"
