--- a/store/trading/index.html
+++ b/store/trading/index.html
@@ -63,7 +63,7 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt"
+            <a class="btn btn-primary" href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 >Enroll Now</a
             >
             <!-- </div> -->
@@ -104,7 +104,7 @@
         <!-- Specs Section -->
         <section class="specs">
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -242,7 +242,7 @@
                     </p>
                 </div>
                 <a
-                    href="https://paytm.me/DMo-0Nt"
+                    href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                     type="button"
                     class="btn btn-primary btn-lg cta"
                 >
@@ -392,7 +392,7 @@
                 </h3>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -494,7 +494,7 @@
                 </div>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -655,7 +655,7 @@
                 </div>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
