cta link update

--- a/store/mega-graphic/index.html
+++ b/store/mega-graphic/index.html
@@ -63,7 +63,7 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="https://paytm.me/DMo-0Nt"
+            <a class="btn btn-primary" href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 >Enroll Now</a
             >
             <!-- </div> -->
@@ -104,7 +104,7 @@
         <!-- Specs Section -->
         <section class="specs">
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -232,7 +232,7 @@
                     </p>
                 </div>
                 <a
-                    href="https://paytm.me/DMo-0Nt"
+                    href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                     type="button"
                     class="btn btn-primary btn-lg cta"
                 >
@@ -380,7 +380,7 @@
                 </h3>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -483,7 +483,7 @@
                 </div>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -645,7 +645,7 @@
                 </div>
             </div>
             <a
-                href="https://paytm.me/DMo-0Nt"
+                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
