--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <body>
         <!-- whatsapp floating icon -->
-        <a href="https://wa.link/ekag57" class="float" target="_blank">
+        <a href="wa.link/8ji9qw" class="float" target="_blank">
             <i class="fa-brands fa-whatsapp my-float"></i>
         </a>
 
@@ -59,7 +59,7 @@
             <!-- Navbar Section -->
             <nav class="navbar navbar-expand-lg nav-style fixed-top">
                 <div class="container">
-                    <a href="#" class="navbar-brand">
+                    <a href="index.html" class="navbar-brand">
                         <span>Cyber</span> Empire
                     </a>
 
@@ -88,7 +88,9 @@
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="contact.html" class="nav-link"
+                                    >Contact</a
+                                >
                             </li>
                         </ul>
                     </div>
@@ -188,28 +190,28 @@
                         <div class="col-lg-4 col-sm-10">
                             <div class="card">
                                 <img
-                                    src="./assets/course-1.png"
+                                    src="./assets/prompt-bundle.png"
                                     alt="Course 1"
                                     class="card-img-top"
                                 />
                                 <hr />
                                 <div class="card-body">
                                     <h3 class="card-title">
-                                        Mega Graphic Design Bootcamp
+                                        ChatGPT Prompts Bundle
                                     </h3>
                                     <p class="card-text">
-                                        In this course, you will learn the
-                                        fundamentals of graphic design and how
-                                        to create stunning designs using Adobe
-                                        Illustrator and Photoshop.
+                                        Get premium prompts in this bundle to
+                                        make money. High-quality and lucrative,
+                                        these prompts are designed to help you
+                                        maximize your earnings.
                                     </p>
                                     <a
                                         type="button"
                                         class="btn btn-outline-info btn-rounded"
                                         data-mdb-ripple-color="dark"
-                                        href="./store/mega-graphic/index.html"
+                                        href="./store/chatgpt-prompts/index.html"
                                     >
-                                        Learn Skill
+                                        Earn Money
                                     </a>
                                 </div>
                             </div>
