--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
 
     <body>
         <!-- whatsapp floating icon -->
-        <a href="https://wa.link/ekag57" class="float" target="_blank">
+        <a href="wa.link/8ji9qw" class="float" target="_blank">
             <i class="fa-brands fa-whatsapp my-float"></i>
         </a>
 
@@ -89,7 +89,9 @@
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="contact.html" class="nav-link"
+                                    >Contact</a
+                                >
                             </li>
                         </ul>
                     </div>
@@ -103,7 +105,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Featured Products</h2>
+                            <h2>All Products</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -199,6 +201,35 @@
                         <div class="col-lg-4 col-sm-10">
                             <div class="card">
                                 <img
+                                    src="./assets/prompt-bundle.png"
+                                    alt="Course 1"
+                                    class="card-img-top"
+                                />
+                                <hr />
+                                <div class="card-body">
+                                    <h3 class="card-title">
+                                        ChatGPT Prompts Bundle
+                                    </h3>
+                                    <p class="card-text">
+                                        Get premium prompts in this bundle to
+                                        make money. High-quality and lucrative,
+                                        these prompts are designed to help you
+                                        maximize your earnings.
+                                    </p>
+                                    <a
+                                        type="button"
+                                        class="btn btn-outline-info btn-rounded"
+                                        data-mdb-ripple-color="dark"
+                                        href="./store/chatgpt-prompts/index.html"
+                                    >
+                                        Earn Money
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-10">
+                            <div class="card">
+                                <img
                                     src="./assets/course-4.png"
                                     alt="Course 4"
                                     class="card-img-top"
@@ -209,7 +240,11 @@
                                         JEE Advance Iconic Subscription
                                     </h3>
                                     <p class="card-text">
-                                        Unacademy IIT JEE Iconic subscription offers you one-on-one guidance from a personal coach throughout your learning journey along with all the benefits of Plus subscription.
+                                        Unacademy IIT JEE Iconic subscription
+                                        offers you one-on-one guidance from a
+                                        personal coach throughout your learning
+                                        journey along with all the benefits of
+                                        Plus subscription.
                                     </p>
                                     <a
                                         type="button"
@@ -222,7 +257,6 @@
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </section>
