--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
 
     <body>
         <!-- whatsapp floating icon -->
-        <a href="https://wa.link/ekag57" class="float" target="_blank">
+        <a href="wa.link/8ji9qw" class="float" target="_blank">
             <i class="fa-brands fa-whatsapp my-float"></i>
         </a>
 
@@ -89,7 +89,9 @@
                                 >
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="contact.html" class="nav-link"
+                                    >Contact</a
+                                >
                             </li>
                         </ul>
                     </div>
@@ -97,7 +99,19 @@
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <!-- Courses Section -->
+            <section class="courses-section">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>All Services</h2>
+                        </div>
+                    </div>
+                    <div><h1>Coming Soon..</h1></div>
+                </div>
+            </section>
+        </main>
 
         <footer>
             <p>Cyber Empire, Inc. © Copyright 2023</p>
