--- a/store/trading/index.html
+++ b/store/trading/index.html
@@ -51,7 +51,7 @@
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
         <!-- whatsapp floating icon -->
-        <a href="https://wa.link/ekag57" class="float" target="_blank">
+        <a href="wa.link/8ji9qw" class="float" target="_blank">
             <i class="fa-brands fa-whatsapp my-float"></i>
         </a>
 
@@ -63,7 +63,7 @@
                 <br />
                 <p>Price will go up soon</p>
             </span>
-            <a class="btn btn-primary" href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+            <a class="btn btn-primary" href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                 >Enroll Now</a
             >
             <!-- </div> -->
@@ -104,7 +104,7 @@
         <!-- Specs Section -->
         <section class="specs">
             <a
-                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+                href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -242,7 +242,7 @@
                     </p>
                 </div>
                 <a
-                    href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+                    href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                     type="button"
                     class="btn btn-primary btn-lg cta"
                 >
@@ -392,7 +392,7 @@
                 </h3>
             </div>
             <a
-                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+                href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -494,7 +494,7 @@
                 </div>
             </div>
             <a
-                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+                href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
@@ -655,7 +655,7 @@
                 </div>
             </div>
             <a
-                href="https://superprofile.bio/cyberempire/NmMcCOtPDH"
+                href="https://superprofile.bio/cyberempire/UxYmEJpCLt"
                 type="button"
                 class="btn btn-primary btn-lg cta"
             >
